    Closes: #623050
  * copyright-format: Update SPDX link to point to the SPDX license registry.
    Patch by Charles Plessy.  Closes: #628540
  * Policy: Clarify that 'machine-extractable' referer the copyright files (12.5)
    Wording:  Charles Plessy <plessy@debian.org>
    Seconded: Bill Allombert <ballombe@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #617516
  * Perl policy: Document major version upgrade trigger
    Wording: Dominic Hargreaves <dom@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Niko Tyni <ntyni@debian.org>
    Seconded: Gregor Herrmann <gregoa@debian.org>
    Closes: #619275

 -- Bill Allombert <ballombe@debian.org>  Wed, 08 Jun 2011 23:01:20 +0200

debian-policy (3.9.2.0) unstable; urgency=low

  * Policy: Require human Maintainer or Uploader, clarify Maintainer
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Raphaël Hertzog <hertzog@debian.org>
    Closes: #459868, #581011
  * Policy: Add an FHS exception on GNU/Hurd for /hurd and /servers
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Seconded: Guillem Jover <guillem@debian.org>
    Closes: #594658
  * Policy: Document DM-Upload-Allowed
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Seconded: Russ Allbery <rra@debian.org>
    Closes: #588014
  * Policy: Update multiarch FHS exception for i386 naming
    Wording: Steve Langasek <vorlon@debian.org>
    Seconded: Aurelien Jarno <aurelien@aurel32.net>
    Seconded: Raphael Hertzog <hertzog@debian.org>
    Closes: #619186
  * Policy: Significant additions to maintainer script documentation
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Steve Langasek <vorlon@debian.org>
    Seconded: Raphaël Hertzog <hertzog@debian.org>
    Closes: #504880
  * Policy: Clarify format of Debian control fields