@@ -30,9 +30,7 @@
         standard, machine-readable format for
         <filename>debian/copyright</filename> files within packages and
         facilitate automated checking and reporting of licenses for packages and
-        sets of packages. The DEP drivers were Steve Langasek
-        <email>vorlon@debian.org</email> and Lars Wirzenius
-        <email>liw@liw.fi</email>.
+        sets of packages.
       </para>
     </abstract>
   </articleinfo>
@@ -143,7 +141,7 @@
         A white space separated list means that the field value may be on one
         line or many, but values in the list are separated by one or more white
         space characters (including space, TAB, and newline).  For example, the
-        <varname>Files</varname>field has a list of filename patterns.
+        <varname>Files</varname> field has a list of filename patterns.
       </para>
     </section>
 
@@ -273,7 +271,7 @@
           package, for instance when a work combines a permissive and a copyleft
           license, or to document a <emphasis>compilation copyright</emphasis>
           and license.  It is possible to use only <varname>License</varname> in
-          the header paragraph, but <varname>Copyright</varname>alone makes no
+          the header paragraph, but <varname>Copyright</varname> alone makes no
           sense.
         </para>
       </section>
@@ -1171,27 +1169,4 @@ License: GPL-2+
     </example>
   </section>
 
-  <section id="appendix">
-    <title>
-      Appendix: Note about the use of this format in Debian
-    </title>
-    <para>
-      The Debian Policy (§<ulink
-      url="http://www.debian.org/doc/debian-policy/ch-docs#s-copyrightfile">12.5</ulink>)
-      demands that each package is accompanied by a file,
-      <filename>debian/copyright</filename> in source packages and
-      <filename>/usr/share/doc/package/copyright</filename> in binary packages,
-      that contains a verbatim copy of its copyright and distribution license.
-      In addition, it requires that copyrights must be extractable by mechanical
-      means.  This proposal for machine-readable copyright and license summary
-      files has been crafted for Debian's use, but it is our hope that other
-      software distributions, as well as upstream developers will adopt it, so
-      that review efforts can be easily reproduced and shared.
-    </para>
-    <para>
-      The copyright of the Debian packaging and the history of package
-      maintainers is simply indicated in a <literal>Files: debian/*</literal>
-      paragraph.
-    </para>
-  </section>
 </article>
