@@ -35,6 +35,11 @@ debian-policy (3.9.3.0) UNRELEASED; urgency=low
     Seconded: Bill Allombert <ballombe@debian.org>
     Seconded: Jakub Wilk <jwilk@debian.org>
     Closes: #617516
+  * copyright-format: remove drivers from abstract and useless appendix
+    Wording: Lars Wirzenius <liw@liw.fi>
+    Seconded: Charles Plessy <plessy@debian.org>
+    Seconded: Jakub Wilk <jwilk@debian.org>
+    Closes: #640735
   * Perl policy: Document major version upgrade trigger
     Wording: Dominic Hargreaves <dom@debian.org>
     Seconded: Russ Allbery <rra@debian.org>
@@ -42,7 +47,7 @@ debian-policy (3.9.3.0) UNRELEASED; urgency=low
     Seconded: Gregor Herrmann <gregoa@debian.org>
     Closes: #619275
 
- -- Bill Allombert <ballombe@debian.org>  Wed, 08 Jun 2011 23:01:20 +0200
+ -- Bill Allombert <ballombe@debian.org>  Thu, 08 Sep 2011 17:05:25 +0200
 
 debian-policy (3.9.2.0) unstable; urgency=low
 
